[gd_scene load_steps=6 format=3 uid="uid://bs2cp3dcs5h2q"]

[ext_resource type="PackedScene" uid="uid://c5kdjgda0ialo" path="res://entities/inventory/inventory.tscn" id="1_cvwpr"]
[ext_resource type="Script" uid="uid://cgitkq5l0duaw" path="res://systems/shop/shop_manager.gd" id="1_rxov8"]
[ext_resource type="Texture2D" uid="uid://burfa61e7geuc" path="res://systems/shop/mokepon-back.png" id="2_q7vm2"]
[ext_resource type="Texture2D" uid="uid://d2axa6tmg1kmj" path="res://systems/shop/gummybear.png" id="4_s7g53"]
[ext_resource type="FontFile" uid="uid://cyj666yjt3or0" path="res://ui/PixelOperator8-Bold.ttf" id="5_s7g53"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxov8")

[node name="SegmentSplitter" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" parent="SegmentSplitter" instance=ExtResource("1_cvwpr")]
unique_name_in_owner = true
layout_mode = 2

[node name="Tesko" type="VBoxContainer" parent="SegmentSplitter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Shelf" type="VBoxContainer" parent="SegmentSplitter/Tesko"]
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="HBoxContainer" parent="SegmentSplitter/Tesko/Shelf"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SegmentSplitter/Tesko/Shelf/Items"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label" type="Label" parent="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "free!"

[node name="TextureRect" type="TextureRect" parent="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("2_q7vm2")
stretch_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="SegmentSplitter/Tesko/Shelf/Items"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label" type="Label" parent="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "free!"

[node name="TextureRect2" type="TextureRect" parent="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("4_s7g53")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="SegmentSplitter/Tesko/Shelf/Items"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
stretch_mode = 3

[node name="Panel" type="Panel" parent="SegmentSplitter/Tesko/Shelf"]
modulate = Color(0.588235, 0.294118, 0, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer" type="MarginContainer" parent="SegmentSplitter/Tesko"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Description" type="RichTextLabel" parent="SegmentSplitter/Tesko/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/bold_font = ExtResource("5_s7g53")
bbcode_enabled = true
text = "[b]BOLD[/b]
not bold"

[connection signal="mouse_entered" from="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer/TextureRect" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_entered" from="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer2/TextureRect2" to="." method="_on_texture_rect_2_mouse_entered"]
[connection signal="mouse_exited" from="SegmentSplitter/Tesko/Shelf/Items/VBoxContainer2/TextureRect2" to="." method="_on_texture_rect_2_mouse_exited"]
